@@ -70,7 +70,6 @@ import javax.swing.UIManager.LookAndFeelInfo;
 import javax.xml.parsers.DocumentBuilder;
 
 import megamek.Version;
-import megamek.client.generator.RandomUnitGenerator;
 import megamek.client.ui.clientGUI.GUIPreferences;
 import megamek.client.ui.dialogs.UnitLoadingDialog;
 import megamek.client.ui.dialogs.buttonDialogs.CommonSettingsDialog;
@@ -759,12 +758,6 @@ public class CampaignGUI extends JPanel {
         miPersonnelMarket.setVisible(!getCampaign().getPersonnelMarket().isNone());
         menuMarket.add(miPersonnelMarket);
 
-        JMenuItem miContractMarket = new JMenuItem(resourceMap.getString("miContractMarket.text"));
-        miContractMarket.setMnemonic(KeyEvent.VK_C);
-        miContractMarket.addActionListener(evt -> showContractMarket());
-        miContractMarket.setVisible(getCampaign().getCampaignOptions().isUseAtB());
-        menuMarket.add(miContractMarket);
-
         JMenuItem miUnitMarket = new JMenuItem(resourceMap.getString("miUnitMarket.text"));
         miUnitMarket.setMnemonic(KeyEvent.VK_U);
         miUnitMarket.addActionListener(evt -> showUnitMarket());
@@ -1056,7 +1049,8 @@ public class CampaignGUI extends JPanel {
                   CampaignGUI.MAX_QUANTITY_SPINNER);
             popupValueChoiceDialog.setVisible(true);
             if (popupValueChoiceDialog.getValue() >= 0) {
-                getCampaign().increaseTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND, popupValueChoiceDialog.getValue());
+                getCampaign().increaseTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND,
+                      popupValueChoiceDialog.getValue());
             }
         });
         menuVehicleCrewGroundPool.add(miHireVehicleCrewGround);
@@ -1071,12 +1065,14 @@ public class CampaignGUI extends JPanel {
                   getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND));
             popupValueChoiceDialog.setVisible(true);
             if (popupValueChoiceDialog.getValue() >= 0) {
-                getCampaign().decreaseTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND, popupValueChoiceDialog.getValue());
+                getCampaign().decreaseTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND,
+                      popupValueChoiceDialog.getValue());
             }
         });
         menuVehicleCrewGroundPool.add(miFireVehicleCrewGround);
 
-        JMenuItem miFullStrengthVehicleCrewGround = new JMenuItem(resourceMap.getString("miFullStrengthVehicleCrewGround.text"));
+        JMenuItem miFullStrengthVehicleCrewGround = new JMenuItem(resourceMap.getString(
+              "miFullStrengthVehicleCrewGround.text"));
         miFullStrengthVehicleCrewGround.addActionListener(evt -> {
             getCampaign().resetTempCrewPoolForRole(PersonnelRole.VEHICLE_CREW_GROUND);
             getCampaign().distributeTempCrewPoolToUnits(PersonnelRole.VEHICLE_CREW_GROUND);
@@ -1084,7 +1080,8 @@ public class CampaignGUI extends JPanel {
         menuVehicleCrewGroundPool.add(miFullStrengthVehicleCrewGround);
 
         JMenuItem miFireAllVehicleCrewGround = new JMenuItem(resourceMap.getString("miFireAllVehicleCrewGround.text"));
-        miFireAllVehicleCrewGround.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND, 0));
+        miFireAllVehicleCrewGround.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND,
+              0));
         menuVehicleCrewGroundPool.add(miFireAllVehicleCrewGround);
         menuMarket.add(menuVehicleCrewGroundPool);
         // endregion Vehicle Crew Ground Pool
@@ -1123,7 +1120,8 @@ public class CampaignGUI extends JPanel {
         });
         menuVehicleCrewVTOLPool.add(miFireVehicleCrewVTOL);
 
-        JMenuItem miFullStrengthVehicleCrewVTOL = new JMenuItem(resourceMap.getString("miFullStrengthVehicleCrewVTOL.text"));
+        JMenuItem miFullStrengthVehicleCrewVTOL = new JMenuItem(resourceMap.getString(
+              "miFullStrengthVehicleCrewVTOL.text"));
         miFullStrengthVehicleCrewVTOL.addActionListener(evt -> {
             getCampaign().resetTempCrewPoolForRole(PersonnelRole.VEHICLE_CREW_VTOL);
             getCampaign().distributeTempCrewPoolToUnits(PersonnelRole.VEHICLE_CREW_VTOL);
@@ -1131,7 +1129,8 @@ public class CampaignGUI extends JPanel {
         menuVehicleCrewVTOLPool.add(miFullStrengthVehicleCrewVTOL);
 
         JMenuItem miFireAllVehicleCrewVTOL = new JMenuItem(resourceMap.getString("miFireAllVehicleCrewVTOL.text"));
-        miFireAllVehicleCrewVTOL.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_VTOL, 0));
+        miFireAllVehicleCrewVTOL.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_VTOL,
+              0));
         menuVehicleCrewVTOLPool.add(miFireAllVehicleCrewVTOL);
         menuMarket.add(menuVehicleCrewVTOLPool);
         // endregion Vehicle Crew VTOL Pool
@@ -1170,7 +1169,8 @@ public class CampaignGUI extends JPanel {
         });
         menuVehicleCrewNavalPool.add(miFireVehicleCrewNaval);
 
-        JMenuItem miFullStrengthVehicleCrewNaval = new JMenuItem(resourceMap.getString("miFullStrengthVehicleCrewNaval.text"));
+        JMenuItem miFullStrengthVehicleCrewNaval = new JMenuItem(resourceMap.getString(
+              "miFullStrengthVehicleCrewNaval.text"));
         miFullStrengthVehicleCrewNaval.addActionListener(evt -> {
             getCampaign().resetTempCrewPoolForRole(PersonnelRole.VEHICLE_CREW_NAVAL);
             getCampaign().distributeTempCrewPoolToUnits(PersonnelRole.VEHICLE_CREW_NAVAL);
@@ -1178,7 +1178,8 @@ public class CampaignGUI extends JPanel {
         menuVehicleCrewNavalPool.add(miFullStrengthVehicleCrewNaval);
 
         JMenuItem miFireAllVehicleCrewNaval = new JMenuItem(resourceMap.getString("miFireAllVehicleCrewNaval.text"));
-        miFireAllVehicleCrewNaval.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_NAVAL, 0));
+        miFireAllVehicleCrewNaval.addActionListener(evt -> getCampaign().setTempCrewPool(PersonnelRole.VEHICLE_CREW_NAVAL,
+              0));
         menuVehicleCrewNavalPool.add(miFireAllVehicleCrewNaval);
         menuMarket.add(menuVehicleCrewNavalPool);
         // endregion Vehicle Crew Naval Pool
@@ -2147,9 +2148,7 @@ public class CampaignGUI extends JPanel {
         missionTypeDialog.setVisible(true);
 
         if (missionTypeDialog.isContract()) {
-            NewContractDialog newContractDialog = campaignOptions.isUseAtB() ?
-                                                        new NewAtBContractDialog(getFrame(), true, getCampaign()) :
-                                                        new NewContractDialog(getFrame(), true, getCampaign());
+            NewContractDialog newContractDialog = new NewContractDialog(getFrame(), true, getCampaign());
             newContractDialog.setVisible(true);
         }
         return missionTypeDialog;
@@ -2262,7 +2261,6 @@ public class CampaignGUI extends JPanel {
     private void menuOptionsActionPerformed(final ActionEvent evt) {
         final CampaignOptions oldOptions = getCampaign().getCampaignOptions();
         // We need to handle it like this for now, as the options above get written to currently
-        boolean atb = oldOptions.isUseAtB();
         boolean factionIntroDate = oldOptions.isFactionIntroDate();
         final RandomDivorceMethod randomDivorceMethod = oldOptions.getRandomDivorceMethod();
         final RandomMarriageMethod randomMarriageMethod = oldOptions.getRandomMarriageMethod();
@@ -2335,29 +2333,6 @@ public class CampaignGUI extends JPanel {
             getCampaign().setContractMarket(newOptions.getContractMarketMethod().getContractMarket());
         }
 
-        if (atb != newOptions.isUseAtB()) {
-            if (newOptions.isUseAtB()) {
-                getCampaign().initAtB(false);
-                // refresh lance assignment table
-                MekHQ.triggerEvent(new OrganizationChangedEvent(getCampaign(), getCampaign().getFormations()));
-            }
-            if (newOptions.isUseAtB()) {
-                int loops = 0;
-                while (!RandomUnitGenerator.getInstance().isInitialized()) {
-                    try {
-                        Thread.sleep(50);
-                        if (++loops > 20) {
-                            // Wait for up to a second
-                            break;
-                        }
-                    } catch (InterruptedException ignore) {
-                    }
-                }
-            } else {
-                getCampaign().shutdownAtB();
-            }
-        }
-
         getCampaign().initTurnover();
 
         if (factionIntroDate != newOptions.isFactionIntroDate()) {
@@ -2423,7 +2398,7 @@ public class CampaignGUI extends JPanel {
                                    JOptionPane.PLAIN_MESSAGE,
                                    null,
                                    techList.toArray(),
-                                   techList.get(0));
+                                   techList.getFirst());
 
             if (null == s) {
                 return;
@@ -3233,7 +3208,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVehicleCrewGround.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vehicle Crew (Ground)</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND) + "</html>";
+        String text = "<html><b>Temp Vehicle Crew (Ground)</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_GROUND) +
+                            "</html>";
         lblTempVehicleCrewGround.setText(text);
     }
 
@@ -3244,7 +3221,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVehicleCrewVTOL.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vehicle Crew (VTOL)</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_VTOL) + "</html>";
+        String text = "<html><b>Temp Vehicle Crew (VTOL)</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_VTOL) +
+                            "</html>";
         lblTempVehicleCrewVTOL.setText(text);
     }
 
@@ -3255,7 +3234,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVehicleCrewNaval.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vehicle Crew (Naval)</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_NAVAL) + "</html>";
+        String text = "<html><b>Temp Vehicle Crew (Naval)</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VEHICLE_CREW_NAVAL) +
+                            "</html>";
         lblTempVehicleCrewNaval.setText(text);
     }
 
@@ -3266,7 +3247,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVesselPilot.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vessel Pilots</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VESSEL_PILOT) + "</html>";
+        String text = "<html><b>Temp Vessel Pilots</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VESSEL_PILOT) +
+                            "</html>";
         lblTempVesselPilot.setText(text);
     }
 
@@ -3277,7 +3260,9 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVesselGunner.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vessel Gunners</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VESSEL_GUNNER) + "</html>";
+        String text = "<html><b>Temp Vessel Gunners</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VESSEL_GUNNER) +
+                            "</html>";
         lblTempVesselGunner.setText(text);
     }
 
@@ -3288,13 +3273,14 @@ public class CampaignGUI extends JPanel {
         }
         lblTempVesselCrew.setVisible(true);
         // FIXME : Localize
-        String text = "<html><b>Temp Vessel Crew</b>: " + getCampaign().getTempCrewPool(PersonnelRole.VESSEL_CREW) + "</html>";
+        String text = "<html><b>Temp Vessel Crew</b>: " +
+                            getCampaign().getTempCrewPool(PersonnelRole.VESSEL_CREW) +
+                            "</html>";
         lblTempVesselCrew.setText(text);
     }
 
     private void refreshPartsAvailability() {
-        if (!getCampaign().getCampaignOptions().isUseAtB() ||
-                  getCampaign().getCampaignOptions().getAcquisitionType() == AcquisitionsType.ANY_TECH) {
+        if (getCampaign().getCampaignOptions().getAcquisitionType() == AcquisitionsType.ANY_TECH) {
             lblPartsAvailabilityRating.setText("");
         } else {
             int partsAvailability = getCampaign().findAtBPartsAvailabilityLevel();
